# Alone-test

./: Dockerfile  Procfile  README.md  config.py  pyproject.toml
AloneMusic/: __main__.py
AloneMusic.egg-info/: requires.txt
AloneMusic/core/: call.py
AloneMusic/plugins/admins/: callback.py  pause.py  resume.py  seek.py  skip.py  speed.py  stop.py  tagall.py
AloneMusic/plugins/bot/: clone.py  help.py  start.py
AloneMusic/plugins/misc/: autoleave.py  watcher.py
AloneMusic/plugins/play/: play.py
AloneMusic/plugins/tools/: tagall.py  vclogger.py  wish.py
AloneMusic/utils/inline/: help.py  start.py
AloneMusic/utils/stream/: stream.py
strings/: helpers.py
strings/langs/: en.yml
